--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -3,10 +3,103 @@
   "profile": "Profile",
   "appInfo": "App Info",
   "notification": "Notification",
+  "premium": "Premium",
   "privacyPolicy": "Privacy Policy",
   "spiritualDisclaimers": "Spiritual Disclaimers",
   "faqS": "FAQs",
   "termsAndConditions": "Terms & Conditions",
-  "fullName": "Full Name"
-
+  "fullName": "Full Name",
+  "goodMorning": "Good Morning",
+  "seeAll": "See All",
+  "dasha": "Dasha",
+  "moonSign": "Moon Sign",
+  "dailyMantra": "Daily Mantra",
+  "home": "Home",
+  "mantras": "Mantras",
+  "remedies": "Remedies",
+  "consult": "Consult",
+  "viewDetailedReading": "View Detailed Reading",
+  "dailyMantraLog": "Daily Mantra Log",
+  "pleaseUploadYourPalmImageFirst": "Please upload your palm image first.",
+  "leftHand": "Left Hand",
+  "rightHand": "Right Hand",
+  "submitForReading": "Submit For Reading",
+  "uploadImageScreenPara": "Your personalized palm reading will only be generated after uploading your palm photo.\u2028 Once the analysis is complete, tailored remedies will be suggested based on your palm and horoscope alignment.",
+  "palmReading": "Palm Reading",
+  "summary": "Summary",
+  "mountAnalysis": "Mount Analysis",
+  "lifeLine": "Life Line",
+  "headLine": "Head Line",
+  "heartLine": "Heart Line",
+  "mountOfJupiter": "Mount Of Jupiter",
+  "mountOfVenus": "Mount Of Venus",
+  "viewRemedies": "View Remedies",
+  "matchWithBirthCart": "Match With Birth Cart",
+  "viewDetails": "View Details",
+  "type": "Type",
+  "description": "Description",
+  "planet": "Planet",
+  "birthChart": "Birth Chart",
+  "birthChartSummary": "Birth Chart Summary",
+  "palmReadingSummary": "Palm Reading Summary",
+  "interpretation": "Interpretation",
+  "active": "Active",
+  "moonInPisces":"Moon in Pisces",
+  "meaning": "Meaning",
+  "suggestedAction": "Suggested Actions",
+  "textInstruction": "Text Instruction",
+  "spiritualMeaning": "Spiritual Meaning",
+  "setReminder": "Set Reminder",
+  "reminderTitle": "Reminder Title",
+  "reminderTitleHintText": "Morning Pooja for Mars Remedy",
+  "daily": "Daily",
+  "weekly": "Weekly",
+  "monthly": "Monthly",
+  "custom": "Custom",
+  "selectDateAndTime": "Select Date & Time",
+  "saveReminder": "Save Reminder",
+  "download": "Download",
+  "share": "Share",
+  "chooseYourPlan": "Choose Your Plan",
+  "free": "Free",
+  "basicHoroscope": "Basic Horoscope",
+  "dailyTips": "Daily Tips",
+  "tier": "Tier",
+  "dailyMantras": "Daily Mantras",
+  "historyAccess": "History Access",
+  "basicRemedies": "Basic Remedies",
+  "month": "Month",
+  "months": "Months",
+  "choosePlan": "Choose Plan",
+  "palmistry": "Palmistry",
+  "birthChartMatching": "Birth Chart Matching",
+  "detailedRemedies": "Detailed Remedies",
+  "consultBooking": "Consult Booking",
+  "allFeaturesUnlocked": "All features unlocked",
+  "advanced": "Advanced",
+  "elite": "Elite",
+  "cancel": "Cancel",
+  "payAndSubscribe": "Pay & Subscribe",
+  "upgradePlan": "Upgrade Plan",
+  "purchasePlan": "Purchase Plan",
+  "choosePaymentMethod": "Choose Payment Method",
+  "payNow": "Pay Now",
+  "paymentConfirmation": "Payment Confirmation",
+  "paymentFailed": "Payment Failed!",
+  "paymentWasSuccessful": "Payment Was Successful",
+  "paymentWasFailed": "Payment Was Failed",
+  "thanks": "Thanks",
+  "done": "Done",
+  "tryAgain": "Try Again",
+  "price": "Price",
+  "subscriptionDate": "Subscription Date",
+  "subscriptionValidity": "Subscription Validity",
+  "dateOfBirth": "Date Of Birth",
+  "timeOfBirth": "Time Of Birth",
+  "placeOfBirth": "Place Of Birth",
+  "currentLocation": "Current Location",
+  "currentSubscription": "Current Subscription",
+  "uploadedPalm": "Uploaded Palm",
+  "uploadPalm": "Upload Palm",
+  "checkYourCurrentPlan": "Check Your Current Plan"
 }
