--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -3,10 +3,104 @@
   "profile": "प्रोफ़ाइल",
   "appInfo": "ऐप जानकारी",
   "notification": "सूचनाएं",
+  "premium": "अधिमूल्य",
   "privacyPolicy": "गोपनीयता नीति",
   "spiritualDisclaimers": "आध्यात्मिक अस्वीकरण",
   "faqS": "पूछे जाने वाले प्रश्न",
   "termsAndConditions": "नियम एवं शर्तें",
-  "fullName": "पूरा नाम"
+  "fullName": "पूरा नाम",
+  "goodMorning": "शुभ प्रभात",
+  "seeAll": "सभी देखें",
+  "dasha": "दशा",
+  "moonSign": "राशि",
+  "dailyMantra": "दैनिक मंत्र",
+  "home": "घर",
+  "mantras": "मंत्र",
+  "remedies": "उपचार",
+  "consult": "परामर्श",
+  "viewDetailedReading": "विस्तृत पठन देखें",
+    "dailyMantraLog": "दैनिक मंत्र लॉग",
+  "pleaseUploadYourPalmImageFirst": "कृपया पहले अपनी हथेली की छवि अपलोड करें।",
+  "leftHand": "बायां हाथ",
+  "rightHand": "दांया हाथ",
+  "submitForReading": "पढ़ने के लिए सबमिट करें",
+  "uploadImageScreenPara": "आपकी हथेली की तस्वीर अपलोड करने के बाद ही आपकी व्यक्तिगत हस्तरेखा तैयार की जाएगी। विश्लेषण पूरा होने के बाद, आपकी हथेली और कुंडली के संरेखण के आधार पर आपको उपयुक्त उपाय सुझाए जाएँगे।",
+  "palmReading": "शक्ति पठन",
+  "summary": "सारांश",
+  "mountAnalysis": "माउंट विश्लेषण",
+  "lifeLine": "जीवन रेखा",
+  "headLine": "हेड लाइन",
+  "heartLine": "ह्रदय रेखा",
+  "mountOfJupiter": "बृहस्पति पर्वत",
+  "mountOfVenus": "शुक्र पर्वत",
+  "viewRemedies": "View Remedies",
+  "matchWithBirthCart": "Match With Birth Cart",
+  "viewDetails": "विवरण देखें",
+  "type": "प्रकार",
+  "description": "विवरण",
+  "planet": "ग्रह",
+  "birthChart": "जन्म कुण्डली",
+  "birthChartSummary": "जन्म कुंडली सारांश",
+  "palmReadingSummary": "हस्तरेखा पढ़ने का सारांश",
+  "interpretation": "व्याख्या",
+  "active": "सक्रिय",
+  "moonInPisces":"मीन राशि में चंद्रमा",
+  "meaning": "अर्थ",
+  "suggestedAction": "सुझावित गतिविधियां",
+  "textInstruction": "पाठ निर्देश",
+  "spiritualMeaning": "आध्यात्मिक अर्थ",
+  "setReminder": "अनुस्मारक सेट करें",
+  "reminderTitle": "अनुस्मारक शीर्षक",
+  "reminderTitleHintText": "मंगल ग्रह के उपाय के लिए प्रातःकालीन पूजा",
+  "daily": "दैनिक",
+  "weekly": "साप्ताहिक",
+  "monthly": "महीने के",
+  "custom": "रिवाज़",
+  "selectDateAndTime": "दिनांक और समय चुनें",
+  "saveReminder": "अनुस्मारक सहेजें",
+  "download": "डाउनलोड करना",
+  "share": "शेयर करना",
+  "chooseYourPlan": "अपनी योजना चुनें",
+  "free": "मुक्त",
+  "basicHoroscope": "मूल राशिफल",
+  "dailyTips": "दैनिक सुझाव",
+  "tier": "टीयर",
+  "dailyMantras": "दैनिक मंत्र",
+  "historyAccess": "इतिहास तक पहुँच",
+  "basicRemedies": "बुनियादी उपचार",
+  "month": "महीना",
+  "months": "महीने",
+  "choosePlan": "योजना चुनें",
+  "palmistry": "हस्तरेखा शास्त्र",
+  "birthChartMatching": "जन्म कुंडली मिलान",
+  "detailedRemedies": "विस्तृत उपाय",
+  "consultBooking": "बुकिंग परामर्श",
+  "allFeaturesUnlocked": "सभी सुविधाएँ अनलॉक",
+  "advanced": "विकसित",
+  "elite": "अभिजात वर्ग",
+  "cancel": "रद्द करे ",
+  "payAndSubscribe": "भुगतान करें और सदस्यता लें",
+  "upgradePlan": "अपग्रेड योजना",
+  "purchasePlan": "खरीदे  योजना",
+  "choosePaymentMethod": "भुगतान विधि चुनें",
+  "payNow": "अब भुगतान करें",
+  "paymentConfirmation": "भुगतान की पुष्टि",
+  "paymentFailed": "भुगतान विफल रहा ",
+  "paymentWasSuccessful": "भुगतान सफल रहा",
+  "paymentWasFailed": "भुगतान विफल हो गया",
+  "thanks": "धन्यवाद",
+  "done": "हो गया",
+  "tryAgain": "पुनः प्रयास करें",
+  "price": "कीमत",
+  "subscriptionDate": "सदस्यता तारीख ",
+  "subscriptionValidity": "सदस्यता की वैधता",
+  "dateOfBirth": "जन्म तारीख",
+  "timeOfBirth": "जन्म समय",
+  "placeOfBirth": "जन्म स्थान",
+  "currentLocation": "वर्तमान स्थान",
+  "currentSubscription": "वर्तमान सदस्यता",
+  "uploadedPalm": "अपलोड किया गया पाम",
+  "uploadPalm": "पाम अपलोड करें",
+  "checkYourCurrentPlan": "अपनी वर्तमान योजना की जाँच करें"
 
 }
