--- a/lib/l10n/app_ta.arb
+++ b/lib/l10n/app_ta.arb
@@ -3,10 +3,104 @@
   "profile": "சுயவிவரம்",
   "appInfo": "பயன்பாட்டு தகவல்",
   "notification": "அறிவிப்புகள்",
+  "premium": "பிரீமியம்",
   "privacyPolicy": "தனியுரிமைக் கொள்கை",
   "spiritualDisclaimers": "ஆன்மீக மறுப்புகள்",
   "faqS": "அடிக்கடி கேட்கப்படும் கேள்விகள்",
   "termsAndConditions": "விதிமுறைகளும் நிபந்தனைகளும்",
-  "fullName": "முழு பெயர்"
+  "fullName": "முழு பெயர்",
+  "goodMorning": "காலை வணக்கம்",
+  "seeAll": "அனைத்தையும் காண்க",
+  "dasha": "தாஷா",
+  "moonSign": "சந்திரன் \nஅடையாளம்",
+  "dailyMantra": "தினசரி மந்திரம்",
+  "home": "முகப்புப் பக்கம்",
+  "mantras": "மந்திரங்கள்",
+  "remedies": "வைத்தியம்",
+  "consult": "ஆலோசனை",
+  "viewDetailedReading": "விரிவான வாசிப்பைக் காண்க",
+  "dailyMantraLog": "தினசரி மந்திரப் பதிவு",
+  "pleaseUploadYourPalmImageFirst": "முதலில் உங்கள் உள்ளங்கைப் படத்தைப் பதிவேற்றவும்.",
+  "leftHand": "இடது கை",
+  "rightHand": "வலது கை",
+  "submitForReading": "படிக்க சமர்ப்பிக்கவும்",
+  "uploadImageScreenPara": "உங்கள் உள்ளங்கை புகைப்படத்தைப் பதிவேற்றிய பின்னரே உங்கள் தனிப்பயனாக்கப்பட்ட உள்ளங்கை அளவீடு உருவாக்கப்படும். பகுப்பாய்வு முடிந்ததும், உங்கள் உள்ளங்கை மற்றும் ஜாதக சீரமைப்பின் அடிப்படையில் தனிப்பயனாக்கப்பட்ட தீர்வுகள் பரிந்துரைக்கப்படும்.",
+  "palmReading": "கைரேகை வாசிப்பு",
+  "summary": "சுருக்கம்",
+  "mountAnalysis": "மவுண்ட் பகுப்பாய்வு",
+  "lifeLine": "வாழ்க்கைக் கோடு",
+  "headLine": "தலைப்பு வரி",
+  "heartLine": "இதயக் கோடு",
+  "mountOfJupiter": "வியாழன் மலை",
+  "mountOfVenus": "வீனஸ் மலை",
+  "viewRemedies": "தீர்வுகளைக் காண்க",
+  "matchWithBirthCart": "பிறப்பு விளக்கப்படத்துடன் பொருத்தம்",
+  "viewDetails": "விவரங்களைப் பார்",
+  "type": "வகை",
+  "description": "விளக்கம்",
+  "planet": "கிரகம்",
+  "birthChart": "பிறப்பு ஜாதகம்",
+  "birthChartSummary": "பிறப்பு விளக்கப்படம் சுருக்கம்",
+  "palmReadingSummary": "பனை வாசிப்பு சுருக்கம்",
+  "interpretation": " விளக்கம்",
+  "active": "செயலில்",
+  "moonInPisces":"மீன ராசியில் சந்திரன்",
+  "meaning": "பொருள்",
+  "suggestedAction": "பரிந்துரைக்கப்பட்ட செயல்கள்",
+  "textInstruction": "உரை வழிமுறை",
+  "spiritualMeaning": "ஆன்மீக அர்த்தம்",
+  "setReminder": "நினைவூட்டலை அமைக்கவும்",
+  "reminderTitle": "நினைவூட்டல் தலைப்பு",
+  "reminderTitleHintText": "செவ்வாய் தோஷ பரிகாரத்திற்கான காலை பூஜை",
+  "daily": "தினசரி",
+  "weekly": "வாராந்திர",
+  "monthly": "மாதாந்திர",
+  "custom": "தனிப்பயன்",
+  "selectDateAndTime": "தேதி & நேரத்தைத் தேர்ந்தெடுக்கவும்",
+  "saveReminder": "நினைவூட்டலைச் சேமி",
+  "download": "பதிவிறக்கவும்",
+  "share": "பகிர்",
+  "chooseYourPlan": "உங்கள் திட்டத்தைத் தேர்வுசெய்யவும்",
+  "free": "இலவசம்",
+  "basicHoroscope": "அடிப்படை ஜாதகம்",
+  "dailyTips": "தினசரி குறிப்புகள்",
+  "tier": "அடுக்கு",
+  "dailyMantras": "தினசரி மந்திரங்கள்",
+  "historyAccess": "வரலாற்று அணுகல்",
+  "basicRemedies": "அடிப்படை வைத்தியம்",
+  "month": "மாதம்",
+  "months": "மாதங்கள்",
+  "choosePlan": "திட்டத்தைத் தேர்வுசெய்க",
+  "palmistry": "கைரேகை சாஸ்திரம்",
+  "birthChartMatching": "பிறப்பு விளக்கப்பட பொருத்தம்",
+  "detailedRemedies": "விரிவான வைத்தியங்கள்",
+  "consultBooking": "முன்பதிவை ஆலோசிக்கவும்",
+  "allFeaturesUnlocked": "அனைத்து அம்சங்களும் திறக்கப்பட்டன",
+  "advanced": "மேம்பட்டது",
+  "elite": "எலைட்",
+  "cancel": "ரத்துசெய்",
+  "payAndSubscribe": "பணம் செலுத்தி குழுசேருங்கள்",
+  "upgradePlan": "மேம்படுத்தல் திட்டம்",
+  "purchasePlan": "கொள்முதல் திட்டம்",
+  "choosePaymentMethod": "கட்டண முறையைத் தேர்வுசெய்யவும்",
+  "payNow": "இப்போதே பணம் செலுத்துங்கள்.",
+  "paymentConfirmation": "கட்டண உறுதிப்படுத்தல்",
+  "paymentFailed": "பணம் செலுத்த முடியவில்லை",
+  "paymentWasSuccessful": "பணம் செலுத்தப்பட்டது",
+  "paymentWasFailed": "பணம் செலுத்த முடியவில்லை.",
+  "thanks": "நன்றி",
+  "done": "முடிந்தது",
+  "tryAgain": "மீண்டும் முயற்சிக்கவும்",
+  "price": "விலை",
+  "subscriptionDate": "சந்தா தேதி",
+  "subscriptionValidity": "சந்தா செல்லுபடியாகும் காலம்",
+  "dateOfBirth": "பிறந்த தேதி",
+  "timeOfBirth": "பிறந்த நேரம்",
+  "placeOfBirth": "பிறந்த இடம்",
+  "currentLocation": "தற்போதைய இடம்",
+  "currentSubscription": "தற்போதைய சந்தா",
+  "uploadedPalm": "பதிவேற்றப்பட்ட உள்ளங்கை",
+  "uploadPalm": "உள்ளங்கையைப் பதிவேற்று",
+  "checkYourCurrentPlan": "உங்கள் தற்போதைய திட்டத்தைச் சரிபார்க்கவும்"
 
 }
