--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -33,8 +33,8 @@
   "heartLine": "ह्रदय रेखा",
   "mountOfJupiter": "बृहस्पति पर्वत",
   "mountOfVenus": "शुक्र पर्वत",
-  "viewRemedies": "View Remedies",
-  "matchWithBirthCart": "Match With Birth Cart",
+  "viewRemedies": "उपाय देखें",
+  "matchWithBirthCart": "जन्म कुंडली से मिलान करें",
   "viewDetails": "विवरण देखें",
   "type": "प्रकार",
   "description": "विवरण",
@@ -58,8 +58,8 @@
   "custom": "रिवाज़",
   "selectDateAndTime": "दिनांक और समय चुनें",
   "saveReminder": "अनुस्मारक सहेजें",
-  "download": "डाउनलोड करना",
-  "share": "शेयर करना",
+  "download": "डाउनलोड करे ",
+  "share": "शेयर करे",
   "chooseYourPlan": "अपनी योजना चुनें",
   "free": "मुक्त",
   "basicHoroscope": "मूल राशिफल",
