--- a/lib/l10n/app_ta.arb
+++ b/lib/l10n/app_ta.arb
@@ -101,6 +101,19 @@
   "currentSubscription": "தற்போதைய சந்தா",
   "uploadedPalm": "பதிவேற்றப்பட்ட உள்ளங்கை",
   "uploadPalm": "உள்ளங்கையைப் பதிவேற்று",
-  "checkYourCurrentPlan": "உங்கள் தற்போதைய திட்டத்தைச் சரிபார்க்கவும்"
+  "checkYourCurrentPlan": "உங்கள் தற்போதைய திட்டத்தைச் சரிபார்க்கவும்",
+  "logOut": "வெளியேறு",
+  "save": "சேமிக்கவும்",
+  "checkBoxWarningMessage": "விதிமுறைகளை ஏற்றுக்கொண்டு தொடர பெட்டியைத் தேர்வுசெய்யவும்.",
+  "internetConnectionMessage": "இணைக்க முடியவில்லை. உங்கள் இணைய இணைப்பைச் சரிபார்க்கவும்.",
+  "noChangesFoundMessage": "புதுப்பிப்புகள் எதுவும் இல்லை. சேமிப்பதற்கு முன் மாற்றங்களைச் செய்யவும்.",
+  "profileUpdatedSuccessfully": "சுயவிவரம் வெற்றிகரமாகப் புதுப்பிக்கப்பட்டது.",
+  "pleaseEnterPalmImage": "உள்ளங்கைப் படத்தை உள்ளிடவும்.",
+  "isRequired": "அவசியம்",
+  "validNameError": "செல்லுபடியாகும் பெயரை உள்ளிடவும் (எழுத்துக்கள் மட்டுமே அனுமதிக்கப்படும்).",
+  "birthPlace": "பிறந்த இடம்",
+  "enterYourFullName": "உங்கள் முழுப் பெயரை உள்ளிடவும்",
+  "enterYourBirthPlace": "உங்கள் பிறந்த இடத்தை உள்ளிடவும்",
+  "enterYourCurrentLocation": "உங்கள் தற்போதைய இருப்பிடத்தை உள்ளிடவும்"
 
 }
