--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -96,7 +96,7 @@
   "subscriptionValidity": "Subscription Validity",
   "dateOfBirth": "Date Of Birth",
   "timeOfBirth": "Time Of Birth",
-  "placeOfBirth": "Place Of Birth",
+  "placeOfBirth": "Place of Birth",
   "currentLocation": "Current Location",
   "currentSubscription": "Current Subscription",
   "uploadedPalm": "Uploaded Palm",
