--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -3,7 +3,7 @@
   "profile": "Profile",
   "appInfo": "App Info",
   "notification": "Notification",
-  "premium": "Premium",
+  "subscription": "Subscription",
   "privacyPolicy": "Privacy Policy",
   "spiritualDisclaimers": "Spiritual Disclaimers",
   "faqS": "FAQs",
