--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -3,7 +3,7 @@
   "profile": "प्रोफ़ाइल",
   "appInfo": "ऐप जानकारी",
   "notification": "सूचनाएं",
-  "premium": "अधिमूल्य",
+  "subscription": "सदस्यता",
   "privacyPolicy": "गोपनीयता नीति",
   "spiritualDisclaimers": "आध्यात्मिक अस्वीकरण",
   "faqS": "पूछे जाने वाले प्रश्न",
