--- a/lib/l10n/app_ta.arb
+++ b/lib/l10n/app_ta.arb
@@ -3,7 +3,7 @@
   "profile": "சுயவிவரம்",
   "appInfo": "பயன்பாட்டு தகவல்",
   "notification": "அறிவிப்புகள்",
-  "premium": "பிரீமியம்",
+  "subscription": "சந்தா",
   "privacyPolicy": "தனியுரிமைக் கொள்கை",
   "spiritualDisclaimers": "ஆன்மீக மறுப்புகள்",
   "faqS": "அடிக்கடி கேட்கப்படும் கேள்விகள்",
