--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -115,20 +115,20 @@
   "enterYourFullName": "अपना पूरा नाम भरें",
   "enterYourBirthPlace": "अपना जन्म स्थान दर्ज करें",
   "enterYourCurrentLocation": "अपना वर्तमान स्थान दर्ज करें",
-  "repeatFrequency": "Repeat Frequency",
-  "monday": "Monday",
-  "tuesday": "Tuesday",
-  "wednesday": "Wednesday",
+  "repeatFrequency": "दोहराव आवृत्ति",
+  "monday": "सोमवार",
+  "tuesday": "मंगलवार",
+  "wednesday": "बुधवार",
   "thursday": "Thursday",
-  "friday": "Friday",
-  "saturday": "Saturday",
-  "sunday": "Sunday",
-  "time": "Time",
-  "selectTime": "Select Time",
-  "karmaFocus": "Karma Focus",
-  "action": "Action",
-  "caution": "Caution",
-  "yourRulingPlanetToday": "Your ruling planet today",
-  "nakshatra": "Nakshatra"
-
+  "friday": "शुक्रवार",
+  "saturday": "शनिवार",
+  "sunday": "रविवार",
+  "time": "समय",
+  "selectTime": "समय चुनें",
+  "karmaFocus": "कर्म फोकस",
+  "action": "कार्रवाई",
+  "caution": "सावधानी",
+  "yourRulingPlanetToday": "आज आपका शासक ग्रह",
+  "nakshatra": "नक्षत्र",
+  "inSights": "इनसाइट्स"
 }
