--- a/lib/l10n/app_ta.arb
+++ b/lib/l10n/app_ta.arb
@@ -135,5 +135,10 @@
   "yes": "ஆம்",
   "noMantraToday": "இன்று எந்த மந்திரமும் திட்டமிடப்படவில்லை.",
   "date": "தேதி",
-  "selectDate": "தேதியைத் தேர்ந்தெடுக்கவும்"
+  "selectDate": "தேதியைத் தேர்ந்தெடுக்கவும்",
+  "career": "தொழில்",
+  "relationships": "உறவுகள்",
+  "health": "சுகாதாரம்",
+  "finance": "நிதி",
+  "spirituality": "ஆன்மீகம்"
 }
