--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -142,5 +142,17 @@
   "finance": "वित्त",
   "spirituality": "आध्यात्मिकता",
   "mountOfSaturn": "शनि पर्वत",
-  "mountOfSun": "सूर्य पर्वत"
+  "mountOfSun": "सूर्य पर्वत",
+  "upgradeNow": "अभी अपग्रेड करें",
+  "premiumAccess": "प्रीमियम एक्सेस",
+  "premiumMessageMountAnalysis": "विस्तृत माउंट विश्लेषण देखने के लिए कृपया प्रीमियम प्लान (टियर 2) में अपग्रेड करें।",
+  "premiumMessageMatchWithBirthChart": "\"जन्म कुंडली से मिलान\" सुविधा विशेष रूप से प्रीमियम प्लान (टियर 2) उपयोगकर्ताओं के लिए उपलब्ध है।",
+  "premiumMessageMatchWithRemedies": "\"उपचार\" सुविधा विशेष रूप से प्रीमियम प्लान (टियर 2) उपयोगकर्ताओं के लिए उपलब्ध है।",
+  "premiumSloganMessageMountAnalysis": "अपनी हथेली के पर्वतों और अपने जीवन पथ पर उनके प्रभाव के बारे में व्यक्तिगत जानकारी प्राप्त करें।",
+  "premiumSloganMessageMatchWithBirthChart": "\"जन्म कुंडली से मिलान\" सुविधा केवल प्रीमियम प्लान (टियर 2) उपयोगकर्ताओं के लिए उपलब्ध है।",
+  "premiumSloganMessageRemedies": "\"रिमेडिज\" सुविधा केवल प्रीमियम प्लान (टियर 2) उपयोगकर्ताओं के लिए उपलब्ध है।",
+  "premiumMantraHistory": "मंत्रों का इतिहास जानें और अपनी आध्यात्मिक यात्रा को ट्रैक करें",
+  "upgradeToTier1": "टियर 1 में अपग्रेड करें"
+
+
 }
