--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -152,5 +152,37 @@
   "premiumSloganMessageMatchWithBirthChart": "The \"Match with Birth Chart\" feature is available exclusively for Premium Plan (Tier 2) users.",
   "premiumSloganMessageRemedies": "The \"Remedies\" feature is available exclusively for Premium Plan (Tier 2) users.",
   "premiumMantraHistory": "Unlock mantra history and track your spiritual journey",
-  "upgradeToTier1": "Upgrade to Tier 1"
+  "upgradeToTier1": "Upgrade to Tier 1",
+  "signUp": "Sign Up",
+  "signUpSlogan": "Unlock personalized astrological insights just for you.",
+  "name": "Name",
+  "email": "Email",
+  "password": "Password",
+  "confirmPassword": "Confirm Password",
+  "alreadyHaveAcc": "Already have an account?",
+  "signIn": "Sign In",
+  "signInSlogan": "Reconnect with your cosmic journey.",
+  "forgotPass": "Forgot Password",
+  "dontHaveAcc": "Don\"t have an account?",
+  "forgotPassSlogan": "Even stars lose their way — let's help you reset yours.",
+  "sendMail": "Send Mail",
+  "enterCode": "Enter 4-Digit Code",
+  "otpVerifySlogan": "Verify your energy with the stars — enter the code.",
+  "verify": "Verify",
+  "resendOtp": "Resend OTP",
+  "resendOtpIn": "Resend OTP in",
+  "resetPassword": "Reset Password",
+  "newPassword": "New Password",
+  "enterYourName": "Enter Your Name",
+  "enterYourEmail": "Enter Your Email",
+  "enterYourPassword": "Enter Your Password",
+  "enterYourConfirmPassword": "Enter Your Confirm Password",
+  "enterYourNewPass": "Enter Your New Password",
+  "enterYourResetPass": "Enter Your Reset Password",
+  "addNewPalm": "Add New Palm",
+  "add": "Add",
+  "warning": "Warning",
+  "warnMessage": "If you add a new palm, the existing data will be lost.",
+  "goodAfternoon": "Good Afternoon",
+  "goodEvening": "Good Evening"
 }
