--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -152,7 +152,38 @@
   "premiumSloganMessageMatchWithBirthChart": "\"जन्म कुंडली से मिलान\" सुविधा केवल प्रीमियम प्लान (टियर 2) उपयोगकर्ताओं के लिए उपलब्ध है।",
   "premiumSloganMessageRemedies": "\"रिमेडिज\" सुविधा केवल प्रीमियम प्लान (टियर 2) उपयोगकर्ताओं के लिए उपलब्ध है।",
   "premiumMantraHistory": "मंत्रों का इतिहास जानें और अपनी आध्यात्मिक यात्रा को ट्रैक करें",
-  "upgradeToTier1": "टियर 1 में अपग्रेड करें"
-
+  "upgradeToTier1": "टियर 1 में अपग्रेड करें",
+  "signUp": "साइन अप करें",
+  "signUpSlogan": "केवल आपके लिए व्यक्तिगत ज्योतिषीय अंतर्दृष्टि अनलॉक करें।",
+  "enterYourName": "अपना नाम दर्ज करें",
+  "name": "नाम",
+  "enterYourEmail": "अपना ईमेल दर्ज करें",
+  "email": "ईमेल",
+  "enterYourPassword": "अपना पासवर्ड दर्ज करे ",
+  "password": "पासवर्ड",
+  "enterYourConfirmPassword": "अपना पुष्टिकरण पासवर्ड दर्ज करें",
+  "confirmPassword": "पासवर्ड की पुष्टि कीजिये",
+  "alreadyHaveAcc": "क्या आपके पास पहले से एक खाता मौजूद है?",
+  "signIn": "साइन इन करें",
+  "signInSlogan": "अपनी ब्रह्मांडीय यात्रा से पुनः जुड़ें।",
+  "forgotPass": "पासवर्ड भूल गए",
+  "dontHaveAcc": "क्या आपके पास खाता नहीं है?",
+  "forgotPassSlogan": "तारे भी अपना रास्ता खो देते हैं - आइये हम आपको अपना रास्ता पुनः खोजने में मदद करें।",
+  "sendMail": "मेल भेजने",
+  "enterCode": "4-अंकीय कोड दर्ज करें",
+  "otpVerifySlogan": "सितारों के साथ अपनी ऊर्जा सत्यापित करें - कोड दर्ज करें।",
+  "verify": "सत्यापित करें",
+  "resendOtp": "OTP पुनः भेजें",
+  "resendOtpIn": "ओटीपी फिर से भेजेंं",
+  "resetPassword": "पासवर्ड रीसेट",
+  "newPassword": "नया पासवर्ड",
+  "enterYourNewPass": "अपना नया पासवर्ड दर्ज करें",
+  "enterYourResetPass": "अपना रीसेट पासवर्ड दर्ज करें",
+  "addNewPalm": "नया पाम जोड़ें",
+  "add": "जोडे",
+  "warning": "चेतावनी",
+  "warnMessage": "यदि आप नया पाम जोड़ते हैं, तो मौजूदा डेटा नष्ट हो जाएगा।",
+  "goodAfternoon": "शुभ दोपहर",
+  "goodEvening": "शुभ संध्या"
 
 }
