--- a/lib/l10n/app_ta.arb
+++ b/lib/l10n/app_ta.arb
@@ -12,7 +12,7 @@
   "goodMorning": "காலை வணக்கம்",
   "seeAll": "பார்வை",
   "dasha": "தாஷா",
-  "moonSign": "சந்திரன் \nஅடையாளம்",
+  "moonSign": "சந்திரன் அடையாளம்",
   "dailyMantra": "தினசரி மந்திரம்",
   "home": "முகப்புப் பக்கம்",
   "mantras": "மந்திரங்கள்",
@@ -152,6 +152,37 @@
   "premiumSloganMessageMatchWithBirthChart": "\"பிறப்பு விளக்கப்படத்துடன் பொருத்து\" அம்சம் பிரீமியம் திட்டம் (நிலை 2) பயனர்களுக்கு மட்டுமே கிடைக்கிறது.",
   "premiumSloganMessageRemedies": "\"வைத்தியம்\" அம்சம் பிரீமியம் திட்டம் (நிலை 2) பயனர்களுக்கு மட்டுமே கிடைக்கிறது.",
   "premiumMantraHistory": "மந்திர வரலாற்றைத் திறந்து உங்கள் ஆன்மீக பயணத்தைக் கண்காணிக்கவும்",
-  "upgradeToTier1": "நிலை 1 க்கு மேம்படுத்தவும்"
-
+  "upgradeToTier1": "நிலை 1 க்கு மேம்படுத்தவும்",
+  "signUp": "பதிவு செய்",
+  "signUpSlogan": "உங்களுக்காகவே தனிப்பயனாக்கப்பட்ட ஜோதிட நுண்ணறிவுகளைத் திறக்கவும்.",
+  "name": "பெயர்",
+  "email": "மின்னஞ்சல்",
+  "password": "கடவுச்சொல்",
+  "confirmPassword": "கடவுச்சொல்லை உறுதிப்படுத்தவும்",
+  "alreadyHaveAcc": "ஏற்கனவே ஒரு கணக்கு உள்ளதா?",
+  "signIn": "உள்நுழை",
+  "signInSlogan": "உங்கள் பிரபஞ்சப் பயணத்துடன் மீண்டும் இணையுங்கள்.",
+  "forgotPass": "கடவுச்சொல் மறந்துவிட்டது",
+  "dontHaveAcc": "கணக்கு இல்லையா?",
+  "forgotPassSlogan": "நட்சத்திரங்கள் கூட வழி தவறுகின்றன - உங்களுடையதை மீட்டமைக்க உதவுவோம்.",
+  "sendMail": "அஞ்சல் அனுப்பு",
+  "enterCode": "4-இலக்க குறியீட்டை உள்ளிடவும்",
+  "otpVerifySlogan": "நட்சத்திரங்களுடன் உங்கள் ஆற்றலைச் சரிபார்க்கவும் - குறியீட்டை உள்ளிடவும்.",
+  "verify": "சரிபார்க்கவும்",
+  "resendOtp": "OTP-ஐ மீண்டும் அனுப்பு",
+  "resendOtpIn": "மீண்டும் அனுப்பு",
+  "resetPassword": "கடவுச்சொல்லை மீட்டமைக்க",
+  "newPassword": "புதிய கடவுச்சொல்",
+  "enterYourName": "உங்கள் பெயரை உள்ளிடவும்",
+  "enterYourEmail": "உங்கள் மின்னஞ்சலை உள்ளிடவும்",
+  "enterYourPassword": "உங்கள் கடவுச்சொல்லை உள்ளிடவும்",
+  "enterYourConfirmPassword": "உங்கள் உறுதிப்படுத்தல் கடவுச்சொல்லை உள்ளிடவும்.",
+  "enterYourNewPass": "உங்கள் புதிய கடவுச்சொல்லை உள்ளிடவும்",
+  "enterYourResetPass": "உங்கள் மீட்டமைப்பு கடவுச்சொல்லை உள்ளிடவும்",
+  "addNewPalm": "புதிய பனையைச் சேர்க்கவும்",
+  "add": "சேர்",
+  "warning": "எச்சரிக்கை",
+  "warnMessage": "நீங்கள் ஒரு புதிய உள்ளங்கையைச் சேர்த்தால், ஏற்கனவே உள்ள தரவு இழக்கப்படும்.",
+  "goodAfternoon": "மதிய வணக்கம்",
+  "goodEvening": "மாலை வணக்கம்"
 }
