--- a/lib/l10n/app_ta.arb
+++ b/lib/l10n/app_ta.arb
@@ -184,5 +184,9 @@
   "warning": "எச்சரிக்கை",
   "warnMessage": "நீங்கள் ஒரு புதிய உள்ளங்கையைச் சேர்த்தால், ஏற்கனவே உள்ள தரவு இழக்கப்படும்.",
   "goodAfternoon": "மதிய வணக்கம்",
-  "goodEvening": "மாலை வணக்கம்"
+  "goodEvening": "மாலை வணக்கம்",
+  "choosePrefLang": "உங்களுக்கு விருப்பமான மொழியைத் தேர்வுசெய்யவும்",
+  "confirm": "உறுதிப்படுத்தவும்",
+  "selectLang": "மொழியைத் தேர்ந்தெடுங்கள்"
+
 }
