--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -91,7 +91,7 @@
   "thanks": "धन्यवाद",
   "done": "हो गया",
   "tryAgain": "पुनः प्रयास करें",
-  "price": "कीमत",
+  "price": "किंमत",
   "subscriptionDate": "सदस्यता तारीख ",
   "subscriptionValidity": "सदस्यता की वैधता",
   "dateOfBirth": "जन्म तारीख",
@@ -169,7 +169,7 @@
   "forgotPass": "पासवर्ड भूल गए",
   "dontHaveAcc": "क्या आपके पास खाता नहीं है?",
   "forgotPassSlogan": "तारे भी अपना रास्ता खो देते हैं - आइये हम आपको अपना रास्ता पुनः खोजने में मदद करें।",
-  "sendMail": "मेल भेजने",
+  "sendMail": "मेल भेजे",
   "enterCode": "4-अंकीय कोड दर्ज करें",
   "otpVerifySlogan": "सितारों के साथ अपनी ऊर्जा सत्यापित करें - कोड दर्ज करें।",
   "verify": "सत्यापित करें",
@@ -188,13 +188,28 @@
   "choosePrefLang": "अपनी पसंदीदा भाषा चुनें",
   "confirm": "पुष्टि करे",
   "selectLang": "भाषा चुने",
-  "registeredSuccessfully": "सफलतापूर्वक पंजीकृत",
-  "loginSuccessfully": "लॉगिन सफलतापूर्वक",
+  "registeredSuccessfully": "सफलतापूर्वक रजिस्टर हो चुका है",
+  "loginSuccessfully": "लॉगिन सफलतापूर्वक हो चुका है",
   "loggedOutSuccessfully": "सफलतापूर्वक लॉग आउट हो गया",
   "familyEnergy": "पारिवारिक ऊर्जा",
   "powerPeriods": "पावर पीरियड्स",
   "emotionalEnergy": "भावनात्मक ऊर्जा",
   "learningOutlook": "सीखने का दृष्टिकोण",
   "spiritualEnergy": "आध्यात्मिक ऊर्जा",
-  "planetarySnapshot": "ग्रहों का स्नैपशॉट"
+  "planetarySnapshot": "ग्रहों का स्नैपशॉट",
+  "otpSentSuccessfully": "OTP सफलतापूर्वक भेजा गया",
+  "otpReSentSuccessfully": "OTP सफलतापूर्वक पुनः भेजा गया",
+  "otpVerifiedSuccessfully": "OTP सफलतापूर्वक सत्यापित",
+  "passwordResetSuccessfully": "पासवर्ड सफलतापूर्वक रीसेट हो गया हे",
+  "dailyReminderCreated": "दैनिक अनुस्मारक बनाया गया है",
+  "weeklyReminderCreated": "साप्ताहिक अनुस्मारक बन गया है",
+  "monthlyReminderCreated": "मासिक अनुस्मारक बन गया है",
+  "customReminderCreated": "कस्टम रिमाइंडर बन गया है",
+  "downloadedSuccessfully": "सफलतापूर्वक डाउनलोड हो गया है",
+  "confirmPassShouldMatch": "पासवर्ड मेच नहीं हो रहा है",
+  "confirmPasswordForValidation": "पासवर्ड की पुष्टि",
+  "passwordSyntaxError": "पासवर्ड कम से कम 8 अक्षरों का होना चाहिए, जिसमें एक बड़ा अक्षर, एक संख्या और एक विशेष वर्ण शामिल होना चाहिए!",
+  "expireToken": "टोकन की समय सीमा समाप्त हो गई है"
+
+
 }
