--- a/lib/l10n/app_ta.arb
+++ b/lib/l10n/app_ta.arb
@@ -196,5 +196,18 @@
   "emotionalEnergy": "உணர்ச்சி ஆற்றல்",
   "learningOutlook": "கற்றல் அவுட்லுக்",
   "spiritualEnergy": "ஆன்மீக ஆற்றல்",
-  "planetarySnapshot": "கோள்களின் புகைப்படம்"
+  "planetarySnapshot": "கோள்களின் புகைப்படம்",
+  "otpSentSuccessfully": "OTP வெற்றிகரமாக அனுப்பப்பட்டது",
+  "otpReSentSuccessfully": "OTP வெற்றிகரமாக அனுப்பப்பட்டது",
+  "otpVerifiedSuccessfully": "OTP வெற்றிகரமாக சரிபார்க்கப்பட்டது",
+  "passwordResetSuccessfully": "கடவுச்சொல் வெற்றிகரமாக மீட்டமைக்கப்பட்டது.",
+  "dailyReminderCreated": "தினசரி நினைவூட்டல் உருவாக்கப்பட்டது.",
+  "weeklyReminderCreated": "வாராந்திர நினைவூட்டல் உருவாக்கப்பட்டது.",
+  "monthlyReminderCreated": "மாதாந்திர நினைவூட்டல் உருவாக்கப்பட்டது.",
+  "customReminderCreated": "தனிப்பயன் நினைவூட்டல் உருவாக்கப்பட்டது.",
+  "downloadedSuccessfully": "வெற்றிகரமாக பதிவிறக்கம் செய்யப்பட்டது.",
+  "confirmPassShouldMatch": "கடவுச்சொல் கடவுச்சொல்லுடன் பொருந்த வேண்டும் என்பதை உறுதிப்படுத்தவும்!",
+  "confirmPasswordForValidation": "கடவுச்சொல்லை உறுதிப்படுத்தவும்",
+  "passwordSyntaxError": "கடவுச்சொல்லில் குறைந்தது 8 எழுத்துகள் இருக்க வேண்டும், அதில் ஒரு பெரிய எழுத்து, ஒரு எண் மற்றும் ஒரு சிறப்பு எழுத்து ஆகியவை அடங்கும்!",
+  "expireToken": "டோக்கன் காலாவதியாகிவிட்டது."
 }
