--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -209,7 +209,9 @@
   "confirmPassShouldMatch": "पासवर्ड मेच नहीं हो रहा है",
   "confirmPasswordForValidation": "पासवर्ड की पुष्टि",
   "passwordSyntaxError": "पासवर्ड कम से कम 8 अक्षरों का होना चाहिए, जिसमें एक बड़ा अक्षर, एक संख्या और एक विशेष वर्ण शामिल होना चाहिए!",
-  "expireToken": "टोकन की समय सीमा समाप्त हो गई है"
+  "expireToken": "टोकन की समय सीमा समाप्त हो गई है",
+  "noMantraHistory": "कोई मंत्र इतिहास उपलब्ध नहीं है."
+
 
 
 }
