--- a/lib/l10n/app_ta.arb
+++ b/lib/l10n/app_ta.arb
@@ -209,5 +209,7 @@
   "confirmPassShouldMatch": "கடவுச்சொல் கடவுச்சொல்லுடன் பொருந்த வேண்டும் என்பதை உறுதிப்படுத்தவும்!",
   "confirmPasswordForValidation": "கடவுச்சொல்லை உறுதிப்படுத்தவும்",
   "passwordSyntaxError": "கடவுச்சொல்லில் குறைந்தது 8 எழுத்துகள் இருக்க வேண்டும், அதில் ஒரு பெரிய எழுத்து, ஒரு எண் மற்றும் ஒரு சிறப்பு எழுத்து ஆகியவை அடங்கும்!",
-  "expireToken": "டோக்கன் காலாவதியாகிவிட்டது."
+  "expireToken": "டோக்கன் காலாவதியாகிவிட்டது.",
+  "noMantraHistory": "மந்திர வரலாறு எதுவும் கிடைக்கவில்லை."
+
 }
